--- a/game.html
+++ b/game.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Phaser 3 Game</title>
+    <title>Endless Runner Game</title>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.min.js"></script>
-    <style>
-        body {
-            margin: 0;
-        }
-    </style>
+    <link rel="stylsheet" href="style.css">
 </head>
 <body>
     <script src="game.js"></script>
