--- a/game.html
+++ b/game.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Endless Runner Game</title>
+    <title>Endless runer game</title>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.min.js"></script>
-    <link rel="stylsheet" href="style.css">
+    <style>
+        body {
+            margin: 0;
+        }
+    </style>
 </head>
 <body>
     <script src="game.js"></script>
